# crawler_gold_currency

./: .env.example  .gitignore  Docker-compose.yml  README.md  docker-compose.dev.yml  main.py  pyproject.toml
alembic/versions/: 66117aecf4cb_create_user_table.py
app/: main.py  routes.py
app/apis/endpoints/: __init__.py  gold_endpoints.py  users_endpoints.py
app/constant/: __init__.py  constant_gold.py
app/core/: __init__.py  redis.py  settings.py
app/services/: __init__.py  gold_service.py
app/tasks/: celery_config.py  task.py
app/utils/: email_util.py  format_util.py
redis_data/: dump.rdb
