[tool.poetry]
name = "crawler-gold-currency"
version = "0.1.0"
description = ""
authors = ["VIET-GITL <viet.info.43@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
aioredis = "^2.0.1"
pydantic = {extras = ["email"], version = "^2.7.4"}
httpx = "^0.27.0"
redis = {extras = ["hiredis"], version = "^5.0.6"}
setuptools = "^70.1.0"
pydantic-settings = "^2.3.3"
celery = {extras = ["beat", "worker"], version = "^5.4.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.1"
requests = "^2.32.3"
aiohttp = "^3.9.5"
asgiref = "^3.8.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
